--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "gh-pages": "^2.0.1",
+    "json-server": "^0.14.2",
+    "jsonwebtoken": "^8.4.0",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
